Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Introduction to Contextua AI"
+title: "Introduction to Contextua"
 description: "Welcome to the home of your new documentation"
+sidebarTitle: "Introduction"
 ---
 
 <img
@@ -17,7 +18,7 @@ description: "Welcome to the home of your new documentation"
 
 ## Setting up
 
-The first step to world-class documentation is setting up your editing environments.
+The first step to documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
   <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
