Update index.mdx from Git UI

--- a/index.mdx
+++ b/index.mdx
@@ -18,7 +18,7 @@ sidebarTitle: "Introduction"
 
 ## Setting up
 
-The first step to documentation is setting up your editing environments.
+The first step to good documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
   <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
